Add ipv6 bias query to bqe config

--- a/k8s/prometheus-federation/deployments/bigquery-exporter.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter.yml
@@ -21,6 +21,7 @@ spec:
         args: [ "--project={{GCLOUD_PROJECT}}",
                 "--type=gauge", "--query=/queries/bq_ndt_tests.sql",
                 "--type=gauge", "--query=/queries/ndt_test_count_total.sql" ]
+                "--type=gauge", "--query=/queries/bq_ipv6_bias.sql" ]
         ports:
         - containerPort: 9050
         volumeMounts:
