Fix typo and make echo fatal

--- a/k8s/prometheus-federation/deployments/bigquery-exporter.yml
+++ b/k8s/prometheus-federation/deployments/bigquery-exporter.yml
@@ -20,7 +20,7 @@ spec:
         # TODO: replace queries with Standard SQL versions when bqe is v1.0.
         args: [ "--project={{GCLOUD_PROJECT}}",
                 "--type=gauge", "--query=/queries/bq_ndt_tests.sql",
-                "--type=gauge", "--query=/queries/ndt_test_count_total.sql" ]
+                "--type=gauge", "--query=/queries/ndt_test_count_total.sql",
                 "--type=gauge", "--query=/queries/bq_ipv6_bias.sql" ]
         ports:
         - containerPort: 9050
