Use the max of yesterday or 1 week ago

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -249,10 +249,15 @@ ALERT SnmpExporterDownOrMissing
   }
 
 
-# ParserDailyVolumeTooLow: today's test volume has dropped over 80% compared to yesterday's volume. The alert condition ignores batch processing.
+# ParserDailyVolumeTooLow: today's test volume has dropped over 80% compared to yesterday's
+# or last week's test volume. The alert condition ignores batch processing.
 ALERT ParserDailyVolumeTooLow
   IF sum by(service) (increase(etl_test_count{service!~".*batch.*"}[2h]))
-        < 0.20 * sum by(service) (increase(etl_test_count[2h] offset 24h))
+     < 0.20 * max by(service) (
+         sum by(service) (increase(etl_test_count[2h] offset 24h))
+            OR
+         sum by(service) (increase(etl_test_count[2h] offset 1w))
+     )
   FOR 1h
   LABELS {
     severity = "page"
