--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -316,6 +316,7 @@ scrape_configs:
         # Note: For now collect only the metrics necessary for alerts. There
         # must be at least one match parameter.Prometheus selects the union of
         # all match parameters.
+        - 'up{container="downloader"}'
         - 'up{application="scraper"}'
         - 'up{application="scraper-sync"}'
         - 'downloader_last_success_time_seconds'
