--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -282,4 +282,5 @@ ALERT ParserDailyVolumeTooLow
   ANNOTATIONS {
     summary = "Today's test volume is less than 20% of yesterday's volume.",
     hints = "Are machines online? Is data being collected? Is the parser working?"
+    url = "http://status.mlab-oti.measurementlab.net:3000/dashboard/db/parserdailyvolumetoolow"
   }
