Fixes config file option for blackbox_exporter. v0.11.0 doesn't support short or single-hyphen options, but only double-hypen.

--- a/k8s/prometheus-federation/deployments/blackbox.yml
+++ b/k8s/prometheus-federation/deployments/blackbox.yml
@@ -37,7 +37,7 @@ spec:
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
         name: blackbox-server
-        args: ["-config.file=/etc/blackbox/config.yml"]
+        args: ["--config.file=/etc/blackbox/config.yml"]
         ports:
           - containerPort: 9115
         resources:
