Fixes a small typo. preferred_ip_protocol should be 'ip4', not 'ip'.

--- a/config/federation/blackbox/config.yml
+++ b/config/federation/blackbox/config.yml
@@ -47,7 +47,7 @@ modules:
     prober: tcp
     timeout: 9s
     tcp:
-      preferred_ip_protocol: "ip"
+      preferred_ip_protocol: "ip4"
       tls: true
 
   # target=<hostname>:9773/sapi/state
