--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -72,6 +72,10 @@ ALERT SidestreamIsNotRunning
 # affected by this at once, or b) many machines are affected and the
 # ParserDailyVolumeTooLow will trigger first.
 #
+# Note: the delay threshold is set to 2h to prevent false positives. For
+# example, a machine is remains running but becomes is not network accessible.
+# After the machine is network accessible, scraper needs time to catch up.
+#
 # TODO(soltesz): remove the != 0 check when legacy records are removed.
 ALERT ScraperMostRecentArchivedFileTimeIsTooOld
   IF (time() - (scraper_maxrawfiletimearchived{container="scraper-sync"} != 0)) > (56 * 60 * 60)
@@ -79,7 +83,7 @@ ALERT ScraperMostRecentArchivedFileTimeIsTooOld
      (time() - process_start_time_seconds{service="sidestream"}) > (30 * 60 * 60)
         UNLESS ON(machine)
      lame_duck_node == 1
-  FOR 10m
+  FOR 2h
   LABELS {
     severity = "page"
   }
