Adds mount paths for new script-targets/ directory.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -93,6 +93,10 @@ spec:
         - mountPath: /snmp-targets
           name: prometheus-storage
           subPath: snmp-targets
+        # /script-targets should contain script_exporter target config files.
+        - mountPath: /script-targets
+          name: prometheus-storage
+          subPath: script-targets
         # /slow-targets should contain slow target config files.
         - mountPath: /slow-targets
           name: prometheus-storage
