Fixes a syntax error in specifying PROJECT.. use template variable substitution, not bash syntax.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -482,7 +482,7 @@ scrape_configs:
       - source_labels: []
         regex: .*
         target_label: __address__
-        replacement: script-exporter.${PROJECT}.measurementlab.net:9172
+        replacement: script-exporter.{{PROJECT}}.measurementlab.net:9172
 
 
   # Scrape config for pushgateway.
