Adds a Grafana dashboards directory into which we can put exported dashboard as a starting point for dashboards-as-code.

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -338,8 +338,8 @@ api_url = https://www.googleapis.com/oauth2/v1/userinfo
 
 ;#################################### Dashboard JSON files ##########################
 [dashboards.json]
-;enabled = false
-;path = /var/lib/grafana/dashboards
+enabled = true
+path = /etc/dashboards
 
 #################################### Alerting ######################################
 [alerting]
