Adds a slash to the end of the directory where Grafana looks for dashboards.

--- a/config/federation/grafana/grafana.ini
+++ b/config/federation/grafana/grafana.ini
@@ -339,7 +339,7 @@ api_url = https://www.googleapis.com/oauth2/v1/userinfo
 ;#################################### Dashboard JSON files ##########################
 [dashboards.json]
 enabled = true
-path = /etc/dashboards/..data
+path = /etc/dashboards/..data/
 
 #################################### Alerting ######################################
 [alerting]
