Add additional warning about using hotfix branches.

--- a/.travis.yml
+++ b/.travis.yml
@@ -92,7 +92,8 @@ deploy:
   on:
     repo: m-lab/prometheus-support
     all_branches: true
-    # Note: condition allows pushes to a hotfix branch or tags that match a prefix "production"
+    # Note: Condition allows pushes to a hotfix branch or tags that match a prefix "production"
+    # Warning: *** Only use hotfix-* branches in an emergency ***
     condition: ( $TRAVIS_EVENT_TYPE == push && $TRAVIS_BRANCH == hotfix-* ) || $TRAVIS_TAG == production*
 
 - provider: script
