Update link to use JSON dashboard for alert

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -334,7 +334,7 @@ ALERT ParserDailyVolumeTooLow
   ANNOTATIONS {
     summary = "Today's test volume is less than 70% of nominal daily volume.",
     hints = "Are machines online? Is data being collected? Is the parser working?",
-    url = "http://status.mlab-oti.measurementlab.net:3000/dashboard/db/parserdailyvolumetoolow"
+    url = "http://status.mlab-oti.measurementlab.net:3000/dashboard/file/Alert_ParserDailyVolumeTooLow.json"
   }
 
 # Nagios is not running (or otherwise broken) on nagios-oam.measurementlab.net,
