Updates the dashboard URL for the annotation of the ScriptExporterMissingMetrics Prom alert rule.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -309,7 +309,7 @@ ALERT ScriptExporterMissingMetrics
     hints = "If the script_exporter service is running, then there may be a target configuration error. Check the target definitions in GCS and the target status in Prometheus.",
     prometheus_targets = "http://status.mlab-oti.measurementlab.net:9090/targets",
     gcsbucket = "https://console.cloud.google.com/storage/browser/operator-mlab-oti/prometheus/script-targets",
-    dashboard = "http://status.mlab-oti.measurementlab.net:3000/dashboard/db/ops-dashboard"
+    dashboard = "http://status.mlab-oti.measurementlab.net:3000/dashboard/file/Ops_SwitchOverview.json"
   }
 
 # TODO:
