Change ingress name from test-tls to grafana-tls.

--- a/k8s/prometheus-federation/services/grafana-tls-ingress.yml
+++ b/k8s/prometheus-federation/services/grafana-tls-ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: test-tls
+  name: grafana-tls
   namespace: default
   annotations:
     kubernetes.io/tls-acme: "true"
