Template out TLS domain and email address.

--- a/k8s/prometheus-federation/deployments/kube-lego.yml
+++ b/k8s/prometheus-federation/deployments/kube-lego.yml
@@ -4,7 +4,7 @@ metadata:
   namespace: kube-lego
 data:
   # modify this to specify your address
-  lego.email: "mlabops@measurementlab.net"
+  lego.email: "{{TLS_EMAIL}}"
   # configure letsencrypt's production api
   lego.url: "https://acme-v01.api.letsencrypt.org/directory"
 kind: ConfigMap
