--- a/k8s/prometheus-federation/mlab-sandbox.yml
+++ b/k8s/prometheus-federation/mlab-sandbox.yml
@@ -5,3 +5,5 @@ PROMETHEUS_RAM: 12Gi
 PROMETHEUS_CPU: 3000m
 PROMETHEUS_VOLUME_SIZE: 200Gi
 EXTERNAL_IP: 35.184.166.181
+TLS_EMAIL: mlabops@measurementlab.net
+TLS_DOMAIN: status.mlab-sandbox.measurementlab.net
