--- a/k8s/prometheus-federation/mlab-staging.yml
+++ b/k8s/prometheus-federation/mlab-staging.yml
@@ -5,3 +5,5 @@ PROMETHEUS_RAM: 12Gi
 PROMETHEUS_CPU: 6000m
 PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.185.76.159
+TLS_EMAIL: mlabops@measurementlab.net
+TLS_DOMAIN: status.mlab-staging.measurementlab.net
