--- a/k8s/prometheus-federation/services/grafana-tls-ingress.yml
+++ b/k8s/prometheus-federation/services/grafana-tls-ingress.yml
@@ -9,10 +9,10 @@ metadata:
 spec:
   tls:
   - hosts:
-    - grafana.sandbox.mlab.fun
+    - {{TLS_DOMAIN}}
     secretName: grafana-tls
   rules:
-  - host: grafana.sandbox.mlab.fun
+  - host: {{TLS_DOMAIN}}
     http:
       paths:
       - path: /*
