--- a/k8s/prometheus-federation/mlab-oti.yml
+++ b/k8s/prometheus-federation/mlab-oti.yml
@@ -5,5 +5,4 @@ PROMETHEUS_RAM: 12Gi
 PROMETHEUS_CPU: 6000m
 PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.184.81.106
-TLS_EMAIL: mlabops@measurementlab.net
-TLS_DOMAIN: status.mlab-oti.measurementlab.net
+TLS_EMAIL: support@measurementlab.net
