--- a/k8s/prometheus-federation/services/alertmanager-tls-service.yml
+++ b/k8s/prometheus-federation/services/alertmanager-tls-service.yml
@@ -2,18 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    # The grafana web server does not export any prometheus metrics.
-    prometheus.io/scrape: 'false'
-  name: grafana-tls-service
+    prometheus.io/scrape: 'true'
+    prometheus.io/port: '9093'
+  name: alertmanager-tls-service
   namespace: default
 spec:
   ports:
-  - port: 3000
+  - port: 9093
     protocol: TCP
-    targetPort: 3000
+    targetPort: 9093
   selector:
     # Pods with labels matching this key/value pair will be publically
     # accessible through the service IP and port.
-    run: grafana-server
+    run: alertmanager-server
   sessionAffinity: None
   type: NodePort
