--- a/k8s/prometheus-federation/services/prometheus-tls-service.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-service.yml
@@ -1,19 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    # The grafana web server does not export any prometheus metrics.
-    prometheus.io/scrape: 'false'
-  name: grafana-tls-service
+  name: prometheus-tls-service
   namespace: default
 spec:
   ports:
-  - port: 3000
+  - port: 9090
     protocol: TCP
-    targetPort: 3000
+    targetPort: 9090
   selector:
     # Pods with labels matching this key/value pair will be publically
     # accessible through the service IP and port.
-    run: grafana-server
+    run: prometheus-server
   sessionAffinity: None
   type: NodePort
