Update paths and add basic auth to prometheus ingress.

--- a/k8s/prometheus-federation/services/grafana-tls-ingress.yml
+++ b/k8s/prometheus-federation/services/grafana-tls-ingress.yml
@@ -15,7 +15,7 @@ spec:
   - host: grafana.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
-      - path: /*
+      - path: /
         backend:
           serviceName: grafana-tls-service
           servicePort: 3000
