--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -63,7 +63,7 @@ spec:
                "-storage.local.index-cache-size.label-name-to-label-values=104857600",
                "-storage.local.index-cache-size.label-pair-to-fingerprints=20971520",
                "-alertmanager.url=http://alertmanager-public-service.default.svc.cluster.local:9093",
-               "-web.external-url=http://status.{{GCLOUD_PROJECT}}.measurementlab.net:9090",
+               "-web.external-url=https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net",
                "-web.console.libraries=/usr/share/prometheus/console_libraries",
                "-web.console.templates=/usr/share/prometheus/consoles"]
         ports:
