--- a/k8s/prometheus-federation/services/prometheus-tls-ingress.yml
+++ b/k8s/prometheus-federation/services/prometheus-tls-ingress.yml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
+    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
 spec:
   tls:
   - hosts:
@@ -15,7 +18,7 @@ spec:
   - host: prometheus.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
-      - path: /*
+      - path: /
         backend:
           serviceName: prometheus-tls-service
           servicePort: 9090
