--- a/k8s/prometheus-federation/mlab-staging.yml
+++ b/k8s/prometheus-federation/mlab-staging.yml
@@ -6,3 +6,4 @@ PROMETHEUS_CPU: 6000m
 PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.185.76.159
 TLS_EMAIL: support@measurementlab.net
+TLS_IP: 35.196.34.1
