--- a/k8s/prometheus-federation/roles/rbac-nginx.yml
+++ b/k8s/prometheus-federation/roles/rbac-nginx.yml
@@ -1,14 +1,19 @@
+# Create a namespace for nginx-ingress and its attendant services.
 apiVersion: v1
 kind: Namespace
 metadata:
   name: nginx-ingress
 ---
+# A ServiceAccount under which nginx-ingress runs.
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: nginx-ingress
   namespace: nginx-ingress
 ---
+# ClusterRole for nginx-ingress, which creates an instance of nginx which acts 
+# as an Ingress that forwards different vhosts and paths to different Service 
+# backends.
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
@@ -61,6 +66,9 @@ rules:
     verbs:
       - update
 ---
+# Role for nginx-ingress, which creates an instance of nginx which acts 
+# as an Ingress that forwards different vhosts and paths to different Service 
+# backends. This provides broader access within the nginx-ingress Namespace.
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: Role
 metadata:
@@ -102,6 +110,7 @@ rules:
     verbs:
       - get
 ---
+# Bind the nginx-ingress ServiceAccount to the Role above.
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: RoleBinding
 metadata:
@@ -116,6 +125,7 @@ subjects:
     name: nginx-ingress
     namespace: nginx-ingress
 ---
+# Bind the nginx-ingress ServiceAccount to the ClusterRole above.
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
