--- a/k8s/prometheus-federation/services/nginx.yml
+++ b/k8s/prometheus-federation/services/nginx.yml
@@ -1,14 +1,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: default-http-backend
   namespace: nginx-ingress
 spec:
+  ports:
+  - port: 80
+    targetPort: 8080
+    protocol: TCP
+  selector:
+    app: default-http-backend
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-lb
+  namespace: nginx-ingress
+  labels:
+    app: nginx-lb
+spec:
+  externalTrafficPolicy: Local
   type: LoadBalancer
+  loadBalancerIP: {{TLS_IP}}
   ports:
   - port: 80
     name: http
+    targetPort: 80
   - port: 443
     name: https
+    targetPort: 443
   selector:
     app: nginx
+
