--- a/k8s/prometheus-federation/deployments/nginx.yml
+++ b/k8s/prometheus-federation/deployments/nginx.yml
@@ -1,8 +1,10 @@
 apiVersion: v1
+# Syntax for nginx configuration measurement units can be found here:
+# https://nginx.org/en/docs/syntax.html
 data:
-  proxy-connect-timeout: "15"
-  proxy-read-timeout: "600"
-  proxy-send-timeout: "600"
+  proxy-connect-timeout: "15s"
+  proxy-read-timeout: "600s"
+  proxy-send-timeout: "600s"
   hsts-include-subdomains: "false"
   body-size: "64m"
   server-name-hash-bucket-size: "256"
@@ -46,6 +48,9 @@ spec:
             containerPort: 80
           - name: https
             containerPort: 443
+          resources:
+            requests:
+              cpu: "1"
           readinessProbe:
             failureThreshold: 3
             httpGet:
@@ -55,3 +60,41 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 1
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: default-http-backend
+  labels:
+    app: default-http-backend
+  namespace: nginx-ingress
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: default-http-backend
+    spec:
+      terminationGracePeriodSeconds: 60
+      containers:
+      - name: default-http-backend
+        # Any image is permissable as long as:
+        # 1. It serves a 404 page at /
+        # 2. It serves 200 on a /healthz endpoint
+        image: gcr.io/google_containers/defaultbackend:1.4
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 30
+          timeoutSeconds: 5
+        ports:
+        - containerPort: 8080
+        resources:
+          limits:
+            cpu: 10m
+            memory: 20Mi
+          requests:
+            cpu: 10m
+            memory: 20Mi
