Adds new IPv6 targets for ndt_raw and ndt_ssl to the gcp-discovery-service.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -159,8 +159,12 @@ spec:
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/script-targets/ndt_queue.json",
                 "--http-target=/targets/blackbox-targets/ndt_raw.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets/ndt_raw.json",
+                "--http-target=/targets/blackbox-targets-ipv6/ndt_raw_ipv6.json",
+                "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets-ipv6/ndt_raw_ipv6.json",
                 "--http-target=/targets/blackbox-targets/ndt_ssl.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets/ndt_ssl.json",
+                "--http-target=/targets/blackbox-targets-ipv6/ndt_ssl_ipv6.json",
+                "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets-ipv6/ndt_ssl_ipv6.json",
                 "--http-target=/targets/legacy-targets/ndt_inotify.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/legacy-targets/ndt_inotify.json",
                 "--http-target=/targets/blackbox-targets/mobiperf.json",
