--- a/k8s/prometheus-federation/services/alertmanager-public-service.yml
+++ b/k8s/prometheus-federation/services/alertmanager-public-service.yml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     prometheus.io/scrape: 'true'
     prometheus.io/port: '9093'
-  name: alertmanager-public-service
+  name: alertmanager-service
   namespace: default
 spec:
   ports:
