--- a/k8s/prometheus-federation/services/blackbox-public-service.yml
+++ b/k8s/prometheus-federation/services/blackbox-public-service.yml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     # The grafana web server does not export any prometheus metrics.
     prometheus.io/scrape: 'false'
-  name: blackbox-public-service
+  name: blackbox-service
   namespace: default
 spec:
   ports:
