--- a/k8s/prometheus-federation/services/prometheus-public-service.yml
+++ b/k8s/prometheus-federation/services/prometheus-public-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-public-service
+  name: prometheus-service
   namespace: default
 spec:
   ports:
