--- a/k8s/prometheus-federation/services/github-receiver-public-service.yml
+++ b/k8s/prometheus-federation/services/github-receiver-public-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: github-receiver-public-service
+  name: github-receiver-service
   namespace: default
 spec:
   ports:
