--- a/k8s/prometheus-federation/services/pushgateway-public-service.yml
+++ b/k8s/prometheus-federation/services/pushgateway-public-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pushgateway-public-service
+  name: pushgateway-service
   namespace: default
 spec:
   ports:
