Alerting for BBE when the BBE service itself is down, not just probes. (#223)
* Fixes a previous PR. Alerting for BBE now alerts when the BBE service is down or missing, not when BBE target checks are down or missing.

* Disables service auto-discovery for blackbox_exporter, and adds a static scrape target for it. This is so that IPv4 and IPv6 instances follow the same patterns.

* Changes to BlackboxExporterIpv4DownOrMissing alert to check for up{job} instead of up{deployment}. It is now like the Ipv6 check. Fixes a type in one other alert name.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -337,8 +337,17 @@ scrape_configs:
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
+
   # Blackbox configurations.
   #
+  # Scrape the blackbox_exporter instance running in the cluster for service
+  # metrics.
+  - job_name: 'blackbox-exporter-ipv4'
+    static_configs:
+      - targets:
+        - blackbox-service.default.svc.cluster.local:9115
+
+
   # Each blackbox configuration uses a different probe (tcp, icmp, http, etc).
   - job_name: 'blackbox-targets'
     metrics_path: /probe
@@ -390,6 +399,14 @@ scrape_configs:
 
   # Blackbox configurations for IPv6 probes.
   #
+  # There are three blackbox_exporter instances running on a Linode VM, one for
+  # each M-Lab GCP project. They each run on different ports.
+  - job_name: 'blackbox-exporter-ipv6'
+    static_configs:
+      - targets:
+        - blackbox-exporter-ipv6.{{PROJECT}}.measurementlab.net:{{BBE_IPV6_PORT}}
+
+
   # Each blackbox configuration uses a different probe (tcp, icmp, http, etc).
   - job_name: 'blackbox-targets-ipv6'
     metrics_path: /probe
