Adds a missing comma that was a syntax error causing the build to fail.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -449,7 +449,7 @@ ALERT CollectdMlabDownOrMissing
     severity = "ticket"
   }
   ANNOTATIONS {
-    summary = "The collectd-mlab service is either down or the metric missing."
+    summary = "The collectd-mlab service is either down or the metric missing.",
     hints = "The collectd-mlab service runs in the mlab_utility slice. Try running the ansible/disco/update-mlab-utility.yaml Ansible playbook in the mlabops repository to configure collectd-mlab. Login to the node and run the check script manually to see what the specific error is (/usr/lib/nagios/plugins/check_collectd_mlab.py)."
   }
 
