Adds an alert for the collectd-mlab service. (#224)
* Adds a new alert for the collectd-mlab service.

* Adds a missing comma that was a syntax error causing the build to fail.

* Prepends 'CoreServices_' onto some, well, core service alerts. Also improves the collectd_mlab alert to alert when any single node_exporter is missing a collected_mlab metric.

* Splits the CoreServices_CollectdMlabDownOrMissing alert into two separte alerts, one for down and one for missing.

* Adds a missing IF to an alert query.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -43,9 +43,10 @@ ALERT ClusterDown
 
 # MachineSLO
 #
-# SidestreamIsNotRunning: an M-Lab server is online, but the sidestream exporter
-# is not. Since sidestream is a core service, this must be fixed.
-ALERT SidestreamIsNotRunning
+# CoreServices_SidestreamIsNotRunning: an M-Lab server is online, but the
+# sidestream exporter is not. Since sidestream is a core service, this must be
+# fixed.
+ALERT CoreServices_SidestreamIsNotRunning
   IF sum_over_time(up{service="sidestream"}[10m]) == 0
         AND ON(machine)
      sum_over_time(probe_success{service="ssh806"}[20m]) / 20 >= 0.90
@@ -438,6 +439,31 @@ ALERT LameDuckMetricMissingForNode
   ANNOTATIONS {
     summary = "Some number of nodes are missing lame-duck status metrics.",
     hints = "Check /var/spool/node_exporter/ on the node to see if the file lame_duck.prom is missing. If it is, use the mlabops Ansible lame-duck.yaml playbook to restore it."
+  }
+
+# A collectd-mlab service has a problem and is down.
+ALERT Coreservices_CollectdMlabDown
+  IF collectd_mlab_success{} == 0
+  FOR 10m
+  LABELS {
+    severity = "ticket"
+  }
+  ANNOTATIONS {
+    summary = "A collectd-mlab service is down.",
+    hints = "The collectd-mlab service runs in the mlab_utility slice. Try running the ansible/disco/update-mlab-utility.yaml Ansible playbook in the mlabops repository to configure collectd-mlab. Login to the node and run the check script manually to see what the specific error is (/usr/lib/nagios/plugins/check_collectd_mlab.py)."
+  }
+
+# A collectd-mlab service metric is missing on some node.
+ALERT Coreservices_CollectdMlabMissing
+  IF up{service="nodeexporter"} == 1
+        UNLESS ON(machine) collectd_mlab_success{}
+  FOR 10m
+  LABELS {
+    severity = "ticket"
+  }
+  ANNOTATIONS {
+    summary = "A collectd-mlab service metric is missing.",
+    hints = "The collectd-mlab service runs in the mlab_utility slice. Try running the ansible/disco/update-mlab-utility.yaml Ansible playbook in the mlabops repository to configure collectd-mlab. Login to the node and run the check script manually to see what the specific error is (/usr/lib/nagios/plugins/check_collectd_mlab.py)."
   }
 
 # TODO:
