Change secretKeyRef to configMapKeyRef.

--- a/k8s/prometheus-federation/deployments/configmap-reload.yml
+++ b/k8s/prometheus-federation/deployments/configmap-reload.yml
@@ -39,7 +39,7 @@ spec:
         env:
         - name: PROM_RELOAD_URL
           valueFrom:
-            secretKeyRef:
+            configMapKeyRef:
               name: configmap-reload
               key: prom_reload_url
         resources:
