--- a/k8s/prometheus-federation/mlab-oti.yml
+++ b/k8s/prometheus-federation/mlab-oti.yml
@@ -7,3 +7,4 @@ PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.184.81.106
 TLS_EMAIL: support@measurementlab.net
 TLS_IP: 35.194.63.109
+GITHUB_RECEIVER_INMEMORY: false
