--- a/k8s/prometheus-federation/mlab-staging.yml
+++ b/k8s/prometheus-federation/mlab-staging.yml
@@ -7,3 +7,4 @@ PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.185.76.159
 TLS_EMAIL: support@measurementlab.net
 TLS_IP: 35.196.34.1
+GITHUB_RECEIVER_INMEMORY: true
